--- a/app/auth/templates/mail/password_reset.html
+++ b/app/auth/templates/mail/password_reset.html
@@ -1,6 +1,6 @@
 <p>Hello,</p>
-<p>Follow this link to reset your {{}} password for your {{}} account.</p>
-<p><a href='{{ link }}'>{{ link }}</a></p>
+<p>Follow this link to reset your {{ app_title }} password for your {{ email }} account.</p>
+<p><a href="{{ link }}">{{ link }}</a></p>
 <p>If you didn’t ask to reset your password, you can ignore this email.</p>
 <p>Thanks,</p>
 <p>Your {{ app_title }} team</p>
