Fix host port in links for password reset and email verification emails. Short text for link in email templates

--- a/app/auth/templates/mail/email_verification.html
+++ b/app/auth/templates/mail/email_verification.html
@@ -1,6 +1,6 @@
 <p>Hello,</p>
 <p>Follow this link to verify your email address.</p>
-<p><a href="{{ link }}">{{ link }}</a></p>
+<p><a href="{{ link }}">click here</p>
 <p>If you didn’t ask to verify this address, you can ignore this email.</p>
 <p>Thanks,</p>
 <p>Your {{ app_title }} team</p>
