Short link in invitation email template, correct link in password reset and email verification emails

--- a/app/auth/templates/mail/invitation.html
+++ b/app/auth/templates/mail/invitation.html
@@ -1,5 +1,5 @@
 <p>Hello,</p>
 <p>You've been invited to {{ app_title }} set password for your {{ email }} account.</p>
-<p><a href="{{ link }}">{{ link }}</a></p>
+<p><a href="{{ link }}">click here</p>
 <p>Thanks,</p>
 <p>Your {{ app_title }} team</p>
